# SDL2-Qt-GameEngine-Editor-Demo

./: .gitmodules  CMakeLists.txt  README.md  gen_sln.py
Source/: main.cpp
Source/Registry/: ComponentsRegistry.h  SystemsRegistry.h  UserComponentsRegistry.h  UserSystemsRegistry.h
